# MainsFrequency

avrsampler/: Double.h  avrsampler.ino  platformio.ini  regression.cpp  regression.h  statemachine.cpp  statemachine.h
rp2040sampler/: CMakeLists.txt  README.md  config.h  lwipopts.h  rp2040sampler.cpp
rp2040sampler/PZEM-004T-v30/src/: PZEM004Tv30.cpp  PZEM004Tv30.h
rp2040sampler/TrueRMS/src/: TrueRMS.cpp  TrueRMS.h
